--- a/VRChat/69/1261369.html
+++ b/VRChat/69/1261369.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "qT2198q/m0kGiDWmP+QjgKkmfBJfjrQlxAbHlOWt/Yw="></script>
+    "I8awqY0ys6echrLiTAjSk99VO4gnkK+CzZJy2/ykXFI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[眼鏡]Simple眼鏡セット(SHG-19-0301_simple、SHG-21-0106L_simple)","description":"シンプルな眼鏡の詰め合わせ商品です。\n\nテクスチャ無しのマテリアルのみなので、\n2色版と1色版をそれぞれ3種類ずつ用意しています。\n\nマテリアルカラー変えるだけでそれっぽくなるよ。\n\nUV展開自体はされているので塗りたい人は頑張ってください・・・\n\n★☆　拡張テクスチャセット追加販売開始　☆★\n4パターン×2色の全8色を3モデルすべてに用意しました。\n1色版のモデルに追加することで利用可能です。\n\n★☆　軽量版(Quest対応)を追加　☆★\n本体に軽量版を追加しました。\n拡張テクスチャには未対応ですが、ToonLit向けテクスチャ同梱です。\n\n\n仕様\n　作者：@Sharono_vvv\n　ファイル形式：unitypackage + fbx\n　ポリゴン数：通常版　fox 1384/wellington 1404/square 1388\n　　　　　　　軽量版　fox 536/wellington 536/square 544\n　その他：ボーンあり(つる左右)\n　テクスチャ：通常版\n　　　　　　　　なし(マテリアルのみ ※UV展開済み)\n　　　　　　　　→拡張テクスチャパック販売開始\n　　　　　　　軽量版\n　　　　　　　　あり(ToonLit用1色)\n\n拡張テクスチャパック\n　注意：眼鏡自体のモデルは含まれておりません。\n　　　　テクスチャ一式と、セットアップ済prefabのみ提供です。\n　　　　眼鏡セット本体をセットでお買い求めください。\n　　　　軽量版モデルには適用できません。\n　３Ｄモデル：含みません\n　テクスチャ：3モデル×4パターン×2色\n　シェーダー：UTS2.0.7セットアップ済。\n\n\n利用にあたって(利用規約)\n\n　〇：商用、非商用問わずご利用ください。\n　〇：改造、別モデルへのパーツ組み込み等はご自由に。\n　×：ただし、販売モデルそのままの状態での転売や他者への配布は禁止とします。\n　不明点ございましたらお問い合わせください。\n","url":"https://booth.pm/ja/items/1261369","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"200","highPrice":"300"},"image":"https://booth.pximg.net/c/620x620/d84d54f0-8809-4972-baee-3f190b4e9fd3/i/1261369/1154156b-e171-4230-8384-adb479e6bf9b_base_resized.jpg"}
     </script>
@@ -86,16 +86,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qT2198q/m0kGiDWmP+QjgKkmfBJfjrQlxAbHlOWt/Yw="></script>
+    nonce="I8awqY0ys6echrLiTAjSk99VO4gnkK+CzZJy2/ykXFI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -124,6 +121,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -138,7 +137,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -179,7 +179,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1261369/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               249
@@ -194,14 +194,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1261369/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               249
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
