--- a/VRChat/14/1261114.html
+++ b/VRChat/14/1261114.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "GyVCdHYISdpDhambsrRLwJBr86nFSEuxAb+0ZJqgbxM="></script>
+    "6H2j+vxuDJH2+niWLWq+ODlwpdeV283FVfwI3eV5R8k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"不正指令電磁的記録の3Dモデル","description":"不正指令電磁的記録のfbxです。\n好きに使ってください。\n不正指令電磁的記録作成等罪も付いてきます。\n一切の責任は負いません。","url":"https://booth.pm/ja/items/1261114","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/5dbde460-c7a3-46db-b869-b52e75f19593/i/1261114/b57c3dbf-6642-4a55-a5a1-29d9819d482f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="GyVCdHYISdpDhambsrRLwJBr86nFSEuxAb+0ZJqgbxM="></script>
+    nonce="6H2j+vxuDJH2+niWLWq+ODlwpdeV283FVfwI3eV5R8k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1261114/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1261114/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
