--- a/VRChat/04/1260804.html
+++ b/VRChat/04/1260804.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Un4XX7vtZ35Hi9ojabijsT0p6YUrMMXAw2PDQh3iCK0="></script>
+    "maHeRCgVsXwHivgU6kZr9VHMNlw3rPDxtpP/XxWCjqE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRoid] ドール風瞳テクスチャ ","description":"VRoidで使用することを想定した瞳のテクスチャ 3色です。ハイライト無し差分がついています。VRoid Studioにて瞳レイヤーにインポートすることで使用することができます。どうぞお役立て下さい。\n\n\n利用規約\n\n・VRoid以外での使用も可能です。\n\n・改変可、商用可です。\n\n・クレジット表記は不要です。\n\n・使用によるトラブルには当方は一切責任を負いかねます。\n\n・予告なくデータの削除、差し替え、価格の改定等、商品内容の変更を行う場合がございます。\n\n・改変したものを含め、テクスチャ単体を再配布または販売することは不可です。\n\n・VRChat, VRoid Hub等に作品の一部としてアップロードすることは素材の再配布とはみなしません。","url":"https://booth.pm/ja/items/1260804","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/dfd20154-d680-41de-a875-bbcb77ea077d/i/1260804/4c3c6b4c-96b7-45cc-b4ce-262c780ac079_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Un4XX7vtZ35Hi9ojabijsT0p6YUrMMXAw2PDQh3iCK0="></script>
+    nonce="maHeRCgVsXwHivgU6kZr9VHMNlw3rPDxtpP/XxWCjqE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -175,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1260804/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               463
@@ -190,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1260804/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               463
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
