--- a/VRChat/56/1260356.html
+++ b/VRChat/56/1260356.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "RL8P7RwUWeepm6pjP8I2ROHuabY0QUiReA7NDwrPfAQ="></script>
+    "brIEZtYjZvzxd+kEHPZrFIxS8S4emWyaLWs2gjzd1k4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat想定】ノーマルマップ付き黒い綿棒モデル","description":"概要\n　・VRChatでの使用を想定した黒い綿棒の3Dモデルです。耳かきプレイ等にご利用ください。\n　・総ポリゴン数1,088 (三角面2,144)\n　・ノーマルマップつき\n　・シェイプキーで軸の長さを約2倍まで伸ばすことができます。\n　・簡易的な導入方法を記載した画像ファイルを同梱しています。\n　・Boost版と無料版の違いはありません。\n\n内容物\n　・テクスチャ1枚\n　・ノーマルマップ1枚\n　・UVマップ1枚\n　・導入方法を記載した画像ファイル2枚\n　・綿棒.blendファイル\n　・綿棒.fbxファイル\n　・綿棒.unitypackageファイル(巨大綿棒アバターのデータ同梱)\n\n利用規約 \n\n・制定日：2019年3月5日 　\n本モデルを利用・配信などいずれかの形で使用した時点で本利用規約に同意したものとします。 \n\n・商業利用、R-18・R-18G利用：可能\n\n・改変：自由　適宜使用するアバターに合わせてサイズ調整やテクスチャ改造などしてください。\n\n・著作者人格権：著作権法59条に準ずる \n\n・著作権：著作権法第17条第1項に従い、画像並びモデルデータに関するオリジナルデータ及びファイル名についてのみ作者に帰属 \n\n・禁止事項：作者であると偽称すること \n\n・本モデルを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません \n\n連絡先 Twitter : KUSIKATU_001\n\n\n\n","url":"https://booth.pm/ja/items/1260356","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/0afa6a37-86e7-4db7-8a98-63cc6ca568a2/i/1260356/0ca1d07b-6605-4f90-925e-df0b4c635bab_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RL8P7RwUWeepm6pjP8I2ROHuabY0QUiReA7NDwrPfAQ="></script>
+    nonce="brIEZtYjZvzxd+kEHPZrFIxS8S4emWyaLWs2gjzd1k4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1260356/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               46
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1260356/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               46
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
