--- a/VRChat/75/1259775.html
+++ b/VRChat/75/1259775.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "rdFeLAsKVpk8mAjoARKcLGQMmDOF1hL6qKu4SKioEOw="></script>
+    "rYqsEy4z9PI79AJLI2bxynlJY4CiL5Xqs/UxBFow1bY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRアバター向け】プチけもみみ娘「ゴスロリねこみみ娘」","description":"デフォルメされた、けもみみ娘のアバターです。\n大きさは小さめです。\n\nこの娘を含んだ６体セットもあります。\nhttps://zouzu.booth.pm/items/1259778","url":"https://booth.pm/ja/items/1259775","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/eebc431e-9433-4f38-aaf9-669c8659dedf/i/1259775/71304cfc-0964-4578-a10b-27b569b02ba8_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rdFeLAsKVpk8mAjoARKcLGQMmDOF1hL6qKu4SKioEOw="></script>
+    nonce="rYqsEy4z9PI79AJLI2bxynlJY4CiL5Xqs/UxBFow1bY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1259775/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               108
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1259775/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               108
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
