--- a/VRChat/09/954709.html
+++ b/VRChat/09/954709.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "MueIDMfiElWgP6vy0DWnJTFszuEgeA38ZI0n2h1Kmeo="></script>
+    "ClvBOumx11reS2llAJaJ6x18cNbdzMNzVVTWk0nekig="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRC用アニメファイル】座りアニメ４種【Humanoid用】","description":"Humanoid用アニメデータです。\n座った体勢のアニメファイルになります。\n※モデルデータ等は付属していません。\n\nフォルダに入っている4種類が椅子に座ったとき用です。\nPRONEIDLE用、EMOTE用は各フォルダに分かれています。\n\nPRONEIDLEに設定すると、デスクトップモードではZキーを押した時、VRモードでは頭を低くした時にポーズを取ります。\n\n※無料、ブースト用内容は同じです。","url":"https://booth.pm/ja/items/954709","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/0adee944-20a4-4964-9f9d-2490cbfecd89/i/954709/465886ab-2afb-49e5-aa7f-2eb28e035d8c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="MueIDMfiElWgP6vy0DWnJTFszuEgeA38ZI0n2h1Kmeo="></script>
+    nonce="ClvBOumx11reS2llAJaJ6x18cNbdzMNzVVTWk0nekig="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/954709/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1562
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/954709/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1562
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
